# vision-bridge

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: 01_architecture.md
scripts/: download_langs.py
src/vision_bridge/: __init__.py  models.py  server.py
src/vision_bridge/backends/: __init__.py  browser.py  ocr.py  uia.py
tests/: manual_browser.py  manual_notepad.py  manual_ocr.py
