[project]
name = "vision-bridge"
version = "0.1.0"
description = "Единый слой зрения для AI-агентов через MCP: десктоп (UIA) + браузер (стелс), экран как структурированный текст."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Ставится по мере реализации бэкендов (Этап 1+)
desktop = ["uiautomation>=2.0.20", "pytesseract>=0.3.10", "mss>=9.0"]
browser = ["patchright>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
vision-bridge = "vision_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_bridge"]
